# scalable_ai_course

./: .gitignore  README.md
scalable_ml/: README.md  README_HPC_Bender.md  pyproject.toml  slurm_first_exercise.sh
scalable_ml/src/scalable_ml/: model_utilities.py  training.py
scalable_ml/src/scalable_ml/fifth_exercise/: data_loading.py  ml_models.py  training.py  training_ori.py
scalable_ml/src/scalable_ml/first_exercise/: data_loading.py  ml_models.py
scalable_ml/src/scalable_ml/fourth_exercise/: kmeans.py
scalable_ml/src/scalable_ml/second_exercise/: data_loading.py  unet_models.py
scalable_ml/src/scalable_ml/third_exercise/: autoencoder_models.py  data_loading.py  training.py
scalable_ml/tests/: test_data_loading.py
scalable_ml/tools/: a_classification_cnn_with_fmnist.py  a_classification_fnn_with_fmnist.py  b_image_segmentation_unet_erosita.py  c_anomaly_detection_autoencoder_erosita.py  c_anomaly_detection_autoencoder_simba.py  d_clustering_kmean_simba.py  e_mpi4py.py  f_hyperparameter_optimization_cnn_fmnist.py  f_hyperparameter_optimization_fnn_fmnist.py  f_hyperparameter_optimization_image_segmentation_unet_erosita.py  f_hyperparameter_optimization_image_segmentation_unet_voc.py
